[gd_scene load_steps=8 format=3 uid="uid://ue7maurm31qw"]

[ext_resource type="Script" path="res://scenes/characters/hud.gd" id="1_wldbl"]
[ext_resource type="FontFile" uid="uid://jyandcv7um13" path="res://fonts/Xolonium-Regular.ttf" id="2_dk7pl"]
[ext_resource type="Texture2D" uid="uid://bx4qq37kiggtp" path="res://art/ui/laser_energy_background.png" id="3_a34va"]
[ext_resource type="Texture2D" uid="uid://k7jgnxpg43wr" path="res://art/ui/laser_energy_fill.png" id="4_obri8"]
[ext_resource type="FontFile" uid="uid://dp2onb0mf0c36" path="res://fonts/Xolonium-Bold.otf" id="5_y8ljf"]

[sub_resource type="InputEventAction" id="InputEventAction_1dr61"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_26iy5"]
events = [SubResource("InputEventAction_1dr61")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_wldbl")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 19.0
offset_right = -18.0
offset_bottom = 100.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_dk7pl")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 2

[node name="ScoreTextLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -83.0
offset_right = -3.0
offset_bottom = 34.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_y8ljf")
theme_override_font_sizes/font_size = 25
text = "Score"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -40.5
offset_right = 400.0
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_dk7pl")
theme_override_font_sizes/font_size = 64
text = "DODGE!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -232.0
offset_right = 132.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_dk7pl")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_26iy5")
text = "START"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShieldEnergyUI" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 800.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.3, 0.3)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureProgressBar" type="TextureProgressBar" parent="ShieldEnergyUI"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource("3_a34va")
texture_progress = ExtResource("4_obri8")

[node name="ShieldEnergyLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -573.0
offset_top = -62.0
offset_right = 573.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_y8ljf")
theme_override_font_sizes/font_size = 25
text = "Shield"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerUpLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -99.0
offset_right = -10.0
offset_bottom = -65.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_y8ljf")
theme_override_font_sizes/font_size = 25
text = "Orbs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerUpOrb" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -67.0
offset_top = -82.0
offset_right = -14.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_y8ljf")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
